--- a/templates/demo.html
+++ b/templates/demo.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="democontainer">
     <div class="col-12 col-md">
-        <video  width="100%" controls class="video" id="video" preload="metadata" src="static/test.mp4" >
+        <video  width="100%" controls class="video" id="video" preload="metadata" src="static/demovideo.mp4" >
             
         </video>
     
