--- a/templates/display.html
+++ b/templates/display.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="democontainer">
     <div class="col-12 col-md">
-        <video  width="100%" controls class="video" id="video" preload="metadata" src="static/projectwithaudio.mp4" >
+        <video  width="100%" controls class="video" id="video" preload="metadata" src="{{ url_for('static', filename=filename) }}" >
             
         </video>
     
