--- a/templates/demo.html
+++ b/templates/demo.html
@@ -2,8 +2,8 @@
 {% block content %}
 <div class="democontainer">
     <div class="col-12 col-md">
-        <video  width="100%" controls class="video" id="video" preload="metadata" src="static/demovideo.mp4" >
-            
+        <video  width="100%" controls class="video" id="video" preload="metadata" src="static/projectwithaudio1598302269.515642.mp4" >
+            <track default kind="captions"  srclang="en" src="{{ url_for('static', filename=filename) }}"/> 
         </video>
     
     </div>    
