--- a/templates/extractedimage.html
+++ b/templates/extractedimage.html
@@ -2,8 +2,6 @@
 {% block content %}
 
 <body>
-    <div id="images">
-
-    </div>
+    <h1>Images Extracted Please check Image folder with in Static folder </h1>
 </body>
 {% endblock %}
