--- a/templates/extractedtext.html
+++ b/templates/extractedtext.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
 
-
+<body>
+    <h1>Text Extracted Please check Text folder with in Static folder </h1>
+</body>
  
 {% endblock %}
