--- a/templates/extractedaudio.html
+++ b/templates/extractedaudio.html
@@ -1,5 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
-
+<body>
+    <div class="containerforupload">
+        <h1>Audio Extracted Please check Audio folder with in Static folder </h1>
+    </div>
+    
+</body>
 
 {% endblock %}
