--- a/templates/extractedtext.html
+++ b/templates/extractedtext.html
@@ -2,7 +2,10 @@
 {% block content %}
 
 <body>
-    <h1>Text Extracted Please check Text folder with in Static folder </h1>
+    <div class="containerforupload">
+        <h1>Text Extracted Please check Text folder with in Static folder </h1>
+    </div>
+    
 </body>
  
 {% endblock %}
