--- a/templates/extractedimage.html
+++ b/templates/extractedimage.html
@@ -2,6 +2,9 @@
 {% block content %}
 
 <body>
-    <h1>Images Extracted Please check Image folder with in Static folder </h1>
+    <div class="containerforupload">
+        <h1>Images Extracted Please check Image folder with in Static folder </h1>
+    </div>
+    
 </body>
 {% endblock %}
