More functionality added

--- a/templates/extractedimage.html
+++ b/templates/extractedimage.html
@@ -4,6 +4,15 @@
 <body>
     <div class="containerforupload">
         <h1>Images Extracted Please check Image folder with in Static folder </h1>
+        <ul>
+            {% for file in files %}
+            <li>
+                <a href="{{ (request.path + '/' if request.path != '/' else '') + file }}">
+                    {{ (request.path + '/' if request.path != '/' else '') + file }}
+                </a>
+            </li>
+            {% endfor %}
+        </ul>
     </div>
     
 </body>
